<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/iva"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp" />


    <!-- view for AdMob Banner Ad -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="1dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".50"
                    android:text="@string/precioneto"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/ivatxta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".50"
                    android:ems="10"
                    android:hint="1200"
                    android:inputType="number|numberDecimal"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".50"
                    android:text="@string/ivap"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/ivatxtb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".50"
                    android:ems="10"
                    android:hint="16"
                    android:inputType="number|numberDecimal"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="Iva"
                    android:text="@string/calcular"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@color/colorPrimary"
                    android:onClick="limpiar"
                    android:text="@string/limpiar"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".50"
                    android:text="@string/preciobruto"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/ivalblc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".50"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight=".50"
                    android:text="@string/impuestos"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/ibablbd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".50"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
