<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:fontFamily="sans-serif-smallcaps"
    android:gravity="center"
    android:text="@string/propina"
    android:textAlignment="center"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="36sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5"
                    android:text="@string/cuenta"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/propinatxta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5"
                    android:ems="10"
                    android:hint="500"
                    android:inputType="number|numberDecimal"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5"
                    android:text="@string/propina"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/propinatxtb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5"
                    android:ems="10"
                    android:hint="%"
                    android:inputType="number|numberDecimal"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="propina"
                    android:text="@string/calcular"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@color/colorPrimary"
                    android:onClick="limpiar"
                    android:text="@string/limpiar"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5"
                    android:text="@string/cantidadpropina"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/propinalblc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5"
                    android:text="0"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5"
                    android:text="@string/total"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/propinalbld"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5"
                    android:text="0"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
