<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/ganancia"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:typeface="serif" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/precioventa"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/txtventa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/precioprovedor"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/txtprovedor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="calcular"
                    android:text="@string/calcular"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

                <Button
                    android:id="@+id/button18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/colorPrimary"
                    android:onClick="limpiar"
                    android:text="@string/limpiar"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/ganancia"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/lblganancia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="0.0"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/gananciaporcentaje"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/lblgananciaporcentaje"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="0 %"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
